[package]
name = "base64easy"
version = "0.1.6"
edition = "2021"
rust-version = "1.56"
authors = ["ssrlive"]
description = "simple encodes and decodes base64 as bytes or utf8"
documentation = "https://docs.rs/base64easy"
readme = "README.md"
keywords = ["base64", "utf8", "encode", "decode", "no_std"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ssrlive/base64easy"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
all-features = true

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dependencies]

[dev-dependencies]
rand = { version = "0.9", features = ["small_rng"] }
